...

    override func viewDidLoad() {
        super.viewDidLoad()

        view.accessibilityIdentifier = "SingleImageView"
        view.backgroundColor = .ypBlack
        scrollView.accessibilityIdentifier = "SingleImageScrollView"
        scrollView.delegate = self
        scrollView.showsVerticalScrollIndicator = false
        scrollView.showsHorizontalScrollIndicator = false
        scrollView.bouncesZoom = true
        imageView.accessibilityIdentifier = "SingleImageImageView"
        imageView.contentMode = .scaleAspectFill
        backButton.accessibilityIdentifier = "SingleImageBackButton"
        shareButton.accessibilityIdentifier = "SingleImageShareButton"

        imageView.image = image
        configureImageViewIfNeeded()
    }

...
